--- a/server/client/src/css/SearchPage.css
+++ b/server/client/src/css/SearchPage.css
@@ -1,6 +1,6 @@
 .search-page {
     margin: 30px auto 0;
-    width: 80% !important;
+    width: 100% !important;
     max-width: 1400px;
 }
 
